sumo/tests/traci/MoveNode/InvalidPositionFormat/net_state.traci
<?xml version="1.0"?>

<!-- generated on 05/18/08 14:43:45 by SUMO sumo Version dev-SVN-r5510
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>routes.rou.xml</route-files>
   </input>

   <output>
      <netstate-dump>netstate_dump.xml</netstate-dump>
   </output>

   <traffic_control_interface_(traci)_server>
      <remote-port>8826</remote-port>
      <penetration>1</penetration>
   </traffic_control_interface_(traci)_server>

</configuration>
-->

<sumo-netstate>
</sumo-netstate>
